--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,7 @@ on:
     branches: ['main']
   pull_request:
     branches: ['main']
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -25,11 +26,8 @@ jobs:
         with:
           version: latest
 
-      - uses: imjasonh/setup-crane@v0.1
-      - run: |
-          go run . --repo=distroless &
-          sleep 3 # Wait for registry to come up.
-          crane manifest localhost:8080/static
+      - uses: imjasonh/setup-crane@v0.2
+      - run: ./e2e-test.sh
 
       # fmt and check terraform configs
       - run: |
