refactor to use gorilla/mux, add unit tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: go build
+      - run: go test ./...
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
