--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,31 +14,11 @@ jobs:
     name: ci
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
       - uses: actions/setup-go@v3
         with:
           go-version: 1.19
-      - uses: actions/checkout@v3
 
-      - run: go build
-      - run: go test ./...
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
-
-      - uses: imjasonh/setup-crane@v0.2
-      - run: ./e2e-test.sh
-
-      # fmt and check terraform configs
-      - run: |
-          # Run a local repo for ko build to push to.
-          go install github.com/google/go-containerregistry/cmd/registry@latest
-          registry &
-          export KO_DOCKER_REPO=localhost:1338
-      - run: |
-          terraform init
-          terraform validate
-          terraform fmt -check -diff
-      - uses: aquasecurity/tfsec-action@v1.0.0
-
+      - run: go run main.go -w ../ all
+        working-directory: magefiles
